--- a/src/containers/homePage.less
+++ b/src/containers/homePage.less
@@ -1,15 +1,16 @@
-html, body {
-    height: 100%;
+body {
     overflow: auto;
     min-width: 290px;
+    height: 100%;
     background: #00c3ff;
     background: -webkit-linear-gradient(to right, #00c3ff, #ffff1c);
     background: linear-gradient(to right, #00c3ff, #ffff1c);
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
            
-    @media only screen and (max-height: 600px) {
-        margin-bottom: 60px;
+    @media only screen and (max-height: 700px) {
+        margin-bottom: 100px;
     }
 
     .homeSearch {
